--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "python.pythonPath": "C:\\Users\\barba\\AppData\\Local\\Microsoft\\WindowsApps\\python.exe"
+  "python.pythonPath": "/usr/bin/python"
 }
